made basic forum page. Everthing broke

--- a/index.html
+++ b/index.html
@@ -11,28 +11,37 @@
 
   <body>
     <div id="app">
-        <div v-if="page == 'login'">
-            <div>
-                <h1>Login</h1>
-                Username: <input v-model="loginUsername" placeholder="Username"><br />
-                Password: <input v-model="loginPassword" type="password" placeholder="Password"><br />
-                <button @click="postSession">Log in</button><br>
-            </div>
 
-            <div>
-                <h1>Sign Up</h1>
-                Full Name <input v-model="newName" placeholder="Name"><br>
-                Username <input v-model="newUsername" placeholder="Username"><br>
-                Password <input v-model="newPassword" type="password" placeholder="Password"><br>
-                <button @click="postUser">Sign Up</button>
-            </div>
-      </div>
       <div v-if="page == 'welcome'">
         <h1>WELCOME</h1>
-
+        <button @click="changePage('login')">Login</button>
+        <button @click="changePage('register')">New User</button>
+      </div>
+      <div v-if="page == 'login'">
+          <h1>Login</h1>
+          Username: <input v-model="loginUsername" placeholder="Username"><br />
+          Password: <input v-model="loginPassword" type="password" placeholder="Password"><br><br>
+          <button @click="postSession, changePage('forum')">Log in</button>
+          <button @click="changePage('welcome')">Back to Home</button>
       </div>
 
+      <div v-if="page == 'register'">
+        <h1>Sign Up</h1>
+          Full Name <input v-model="newName" placeholder="Name"><br>
+          Username <input v-model="newUsername" placeholder="Username"><br>
+          Password <input v-model="newPassword" type="password" placeholder="Password"><br><br>
+          <button @click="postUser">Sign Up</button>
+          <button @click="changePage('welcome')">Back to Home</button>
+      </div>
+
+      <div v-if="page == 'forum'">
+        Name: <input v-model="threadName"><br>
+        Category: <input v-model="threadCategory"><br>
+        Description: <textarea v-model="threadDescription"></textarea><br><br>
+        <button @click="postThread">Post</button>
+      </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="app.js"></script>
   </body>
