--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
 
   <body>
     <div id="app">
-
+<!-- WELCOME PAGE  -->
       <div v-if="page == 'welcome'">
         <h1>WELCOME</h1>
         <button @click="changePage('login')">Login</button>
         <button @click="changePage('register')">New User</button>
       </div>
-      <div v-if="page == 'login'">
+
+      <!-- LOGIN PAGE -->
+      <div v-else-if="page == 'login'">
           <h1>Login</h1>
           Username: <input v-model="loginUsername" placeholder="Username"><br />
           Password: <input v-model="loginPassword" type="password" placeholder="Password"><br><br>
-          <button @click="postSession, changePage('forum')">Log in</button>
+          <button @click="postSession, changePage('thread')">Log in</button>
           <button @click="changePage('welcome')">Back to Home</button>
       </div>
-
-      <div v-if="page == 'register'">
+<!-- NEW USER REGISTER -->
+      <div v-else-if="page == 'register'">
         <h1>Sign Up</h1>
           Full Name <input v-model="newName" placeholder="Name"><br>
           Username <input v-model="newUsername" placeholder="Username"><br>
@@ -33,15 +35,25 @@
           <button @click="postUser">Sign Up</button>
           <button @click="changePage('welcome')">Back to Home</button>
       </div>
-
-      <div v-if="page == 'forum'">
-        Name: <input v-model="threadName"><br>
-        Category: <input v-model="threadCategory"><br>
-        Description: <textarea v-model="threadDescription"></textarea><br><br>
-        <button @click="postThread">Post</button>
+<!-- HOME -->
+      <div v-else-if="page == 'home'">
+        <h1>Forum App</h1>
+        <div v-for="thread in threads">
+          <h3>{{thread.name}}</h3>
+          <p>{{ thread.description }} - {{thread.user.fullname}}</p>
+        </div>
+      </div>
+<!-- THREAD -->
+      <div v-else-if="page == 'thread'">
+        <h1>{{ currentThread.name }}</h1>
+        <div v-for="post in currentThread.posts">
+          <p>
+            {{ post.body }} - 
+            <i> {{post.user.fullname}}</i>
+          </p>
+        </div>
       </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="app.js"></script>
   </body>
