--- a/index.html
+++ b/index.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
 <html>
-
-  <head> 
-
-    <title>
-    Forum
-    </title>
-
-  </head>
-
-  <body>
+<head>
+    <title>Forum App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <div id="app">
+        <!-- Login with existing account -->
         <div v-if="page == 'login'">
-            <div>
-                <h1>Login</h1>
-                Username: <input v-model="loginUsername" placeholder="Username"><br />
-                Password: <input v-model="loginPassword" type="password" placeholder="Password"><br />
-                <button @click="postSession">Log in</button><br>
-            </div>
+            <h1>Login Form</h1>
+            <input placeholder="email" v-model="loginEmailInput"><br>
+            <input type="password" placeholder="password" v-model="loginPasswordInput"><br>
+            <button v-on:click="postSession">Login</button>
+            <button v-on:click="setPage('register')">Register</button>
+        </div>
 
-            <div>
-                <h1>Sign Up</h1>
-                Full Name <input v-model="newName" placeholder="Name"><br>
-                Username <input v-model="newUsername" placeholder="Username"><br>
-                Password <input v-model="newPassword" type="password" placeholder="Password"><br>
-                <button @click="postUser">Sign Up</button>
-            </div>
-      </div>
-      <div v-if="page == 'welcome'">
-        <h1>WELCOME</h1>
+        <!-- Creating a new account -->
+        <div v-else-if="page == 'register'">
+            <h1>Registration Form</h1>
+            <input placeholder="new email" v-model="newEmailInput"><br>
+            <input type="password" placeholder="new password" v-model="newPasswordInput"><br>
+            <input placeholder="full name" v-model="newFullnameInput"><br>
+            <button v-on:click="postUser">Register</button>
+        </div>
 
-      </div>
+        <!-- Home page - displays all threads (high level, no comments) -->
+        <div v-else-if="page == 'home'">
+            <h1 class="home_title">Forum App - Enjoy your stay</h1>
+            <div class="thread" v-for="thread in threads">
+                <h3>{{ thread.name }}</h3>
+                <p>{{ thread.description }} - {{ thread.user.fullname }}</p>
+            </div>
+        </div>
+
+        <!-- Thread page - displays a single thread, along with comments -->
+        <div v-else-if="page == 'thread'">
+          <div>
+          <h1>{{ currentThread.name }}</h1>
+          <div
+          v-for="post in currentThread.posts"
+          v-bind:class="threads">
+                  <p>
+                    {{ post.body }} - 
+                    <i>{{ post.user.fullname }}</i>
+                </p>
+            </div>
+          </div>
+        </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="app.js"></script>
-  </body>
+</body>
 </html>
